--- a/webpack/assets/javascripts/browser/browser.css
+++ b/webpack/assets/javascripts/browser/browser.css
@@ -5,6 +5,17 @@
 }
 */
 
+.browser__card img {
+  min-height: 230px;
+  max-height: 230px;
+}
+
+.browser__card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .browser__card-description {
   height: 100px;
   max-height: 100px;
