--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Watif</title>
+
+  <!-- prevent constant requests for favicon -->
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
