--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <%= include_gon %>
+
+  <script src="assets/javascripts/bundle.js"></script>
 </head>
 <body>
 
