--- a/app/javascripts/reader/text-display.scss
+++ b/app/javascripts/reader/text-display.scss
@@ -51,3 +51,7 @@ $footerHeight: $headerHeight;
 .text-display__paragraph {
   padding-bottom: 10px;
 }
+
+.text-display__item-link {
+  font-weight: bold;
+}
